<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:id="@+id/activity_sms_receiver"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SmsReceiverActivity">

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_from" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/txt_message" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:layout_gravity="end"
        android:text="@string/txt_close"/>
</LinearLayout>